force-app/main/default/objects/Rate__c/fields/Publicly_Available__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this rate currently publicly available?</description>
    <inlineHelpText>Is this rate currently publicly available?</inlineHelpText>
    <label>Publicly Available</label>
    <type>Checkbox</type>
</CustomField>