force-app/main/default/objects/Rate__c/fields/Rate_Priced_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Priced_Date__c</fullName>
    <description>Date that the current price was added to the rate</description>
    <inlineHelpText>Date that the current price was added to the rate</inlineHelpText>
    <label>Rate Priced Date</label>
    <type>DateTime</type>
</CustomField>