force-app/main/default/objects/Rate__c/fields/Receipt_Obligation_Applies__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Obligation_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Obligation Applies</label>
    <type>Checkbox</type>
</CustomField>