force-app/main/default/objects/Rate__c/fields/Reconnect_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reconnect_Fee__c</fullName>
    <description>REP processing Fee to reconnect a customer who had been previously disconnected by the REP</description>
    <inlineHelpText>REP processing Fee to reconnect a customer who had been previously disconnected by the REP</inlineHelpText>
    <label>Reconnect Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>