force-app/main/default/objects/Rate__c/fields/Reminder_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Fee__c</fullName>
    <description>Fee for reminder of past-due bill</description>
    <inlineHelpText>Fee for reminder of past-due bill</inlineHelpText>
    <label>Reminder Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>