force-app/main/default/objects/Rate__c/fields/Removal_Code__c.field-meta.xml
<CustomField>
    <fullName>Removal_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This code is used for removal pricing and can not be used for dynamic pricing.</description>
    <inlineHelpText>This code is used for removal pricing and can not be used for dynamic pricing.</inlineHelpText>
    <label>Removal Code</label>
    <type>Checkbox</type>
</CustomField>