force-app/main/default/objects/Rate__c/fields/Renewal_Offer__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this pricing for renewal customers?</description>
    <inlineHelpText>Is this pricing for renewal customers?</inlineHelpText>
    <label>Renewal Offer</label>
    <type>Checkbox</type>
</CustomField>