force-app/main/default/objects/Rate__c/fields/RUC_Nodal_Fees__c.field-meta.xml
<CustomField>
    <fullName>RUC_Nodal_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are the ERCOT Reliability Unit Commitment (RUC) passed through in this rate?</description>
    <inlineHelpText>Are the ERCOT Reliability Unit Commitment (RUC) passed through in this rate?</inlineHelpText>
    <label>RUC Included?</label>
    <type>Checkbox</type>
</CustomField>