force-app/main/default/objects/Rate__c/fields/Safari_PriceType_Name__c.field-meta.xml
<CustomField>
    <fullName>Safari_PriceType_Name__c</fullName>
    <label>Safari PriceType Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Fixed Price</fullName>
            </value>
            <value>
                <fullName>Agency Index Price</fullName>
            </value>
            <value>
                <fullName>Demand Charge</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Fixed Price + Fuel</fullName>
            </value>
            <value>
                <fullName>Fixed Price Plus %</fullName>
            </value>
            <value>
                <fullName>Fixed Vol &amp; Basis w/ Price Trigger</fullName>
            </value>
            <value>
                <fullName>Fixed Vol &amp; Price w/ Basis Trigger</fullName>
            </value>
            <value>
                <fullName>Fixed Vol Index</fullName>
            </value>
            <value>
                <fullName>Fixed Vol Index + Fuel</fullName>
            </value>
            <value>
                <fullName>Fixed Vol Index Plus %</fullName>
            </value>
            <value>
                <fullName>Fixed Volume</fullName>
            </value>
            <value>
                <fullName>Fixed Volume &amp; Price + Fuel</fullName>
            </value>
            <value>
                <fullName>Fixed Volume Index w/Collar</fullName>
            </value>
            <value>
                <fullName>Fixed Volume Plus %</fullName>
            </value>
            <value>
                <fullName>Fixed Volume Spot</fullName>
            </value>
            <value>
                <fullName>FOM Baseload Vol Index</fullName>
            </value>
            <value>
                <fullName>FOM Baseload Vol Index + Fuel</fullName>
            </value>
            <value>
                <fullName>FOM Baseload Volume &amp; Price + Fuel</fullName>
            </value>
            <value>
                <fullName>Gas Futures Purchase</fullName>
            </value>
            <value>
                <fullName>Higher</fullName>
            </value>
            <value>
                <fullName>Index + Fuel</fullName>
            </value>
            <value>
                <fullName>Index Plus Percent</fullName>
            </value>
            <value>
                <fullName>Index w/Collar</fullName>
            </value>
            <value>
                <fullName>Index w/Split Basis</fullName>
            </value>
            <value>
                <fullName>Indexed</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>WACOG Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>