force-app/main/default/objects/Rate__c/fields/Same_Day_Move_In_Fee__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Move_In_Fee__c</fullName>
    <description>Fee for same day move-ins.</description>
    <inlineHelpText>Fee for same day move-ins.</inlineHelpText>
    <label>Same-Day Move-In Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>