force-app/main/default/objects/Rate__c/fields/Self_Selected_Switch_Fee__c.field-meta.xml
<CustomField>
    <fullName>Self_Selected_Switch_Fee__c</fullName>
    <description>Fee for customers selecting a specific date for their switch.</description>
    <inlineHelpText>Fee for customers selecting a specific date for their switch.</inlineHelpText>
    <label>Self-Selected Switch Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>