force-app/main/default/objects/Rate__c/fields/SG_Available_for_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>SG_Available_for_Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This rate option is available for the SG dynamic pricing system</description>
    <inlineHelpText>This rate option is available for the SG dynamic pricing system</inlineHelpText>
    <label>SG Available for Dynamic</label>
    <type>Checkbox</type>
</CustomField>