force-app/main/default/objects/Rate__c/fields/SG_Key__c.field-meta.xml
<CustomField>
    <fullName>SG_Key__c</fullName>
    <description>Combination of Confirmation Code Year with Confirmation Code</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Confirmation Code Year with Confirmation Code</inlineHelpText>
    <label>SG Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>