force-app/main/default/objects/Rate__c/fields/Specific_CES_Location_2__c.field-meta.xml
<CustomField>
    <fullName>Specific_CES_Location_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specific CES Location 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CES Location</value>
        </filterItems>
        <infoMessage>Filter is required for desired results.  DO NOT REMOVE</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rates (Specific CES Location 2)</relationshipLabel>
    <relationshipName>Rates1</relationshipName>
    <type>Lookup</type>
</CustomField>