force-app/main/default/objects/Rate__c/fields/Standard_Move_In_for_New_Meters__c.field-meta.xml
<CustomField>
    <fullName>Standard_Move_In_for_New_Meters__c</fullName>
    <description>Move-in fee if a new meter is installed</description>
    <inlineHelpText>Move-in fee if a new meter is installed</inlineHelpText>
    <label>Standard Move-In for New Meters</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>