force-app/main/default/objects/Rate__c/fields/Step_1_Limit__c.field-meta.xml
<CustomField>
    <fullName>Step_1_Limit__c</fullName>
    <formula>CASE(text( Plan__r.Rate_Type__c ), 
&quot;SmartCap&quot;, &quot;MAX&quot;, 
&quot;Fixed&quot;, &quot;MAX&quot;,
&quot;IndexNoSpread&quot;, &quot;MAX&quot;,
&quot;Index&quot;, &quot;MAX&quot;, 
&quot;SmartBlended&quot;, &quot;MAX&quot;, 
&quot;SmartFixed&quot;, if(Fixed_Rate_Percentage__c=1, &#39;MAX&#39;, text(Fixed_Rate_Percentage__c)), 
&quot;Blended&quot;, text(Fixed_Rate_Percentage__c),  
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 1 Limit</label>
    <type>Text</type>
</CustomField>