force-app/main/default/objects/Rate__c/fields/Step_2_Limit__c.field-meta.xml
<CustomField>
    <fullName>Step_2_Limit__c</fullName>
    <formula>CASE(text( Plan__r.Rate_Type__c ), 
&quot;SmartCap&quot;, &quot;&quot;, 
&quot;Index&quot;, &quot;&quot;, 
&quot;IndexNoSpread&quot;, &quot;&quot;,
&quot;Fixed&quot;, &quot;&quot;,
&quot;SmartBlended&quot;, &quot;&quot;, 
&quot;SmartFixed&quot;, &quot;MAX&quot;, 
&quot;Blended&quot;, &quot;MAX&quot;, 
&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 2 Limit</label>
    <type>Text</type>
</CustomField>