force-app/main/default/objects/Rate__c/fields/Step_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Step_2_Value__c</fullName>
    <formula>CASE(text( Plan__r.Rate_Type__c ), 
&quot;SmartCap&quot;, null, 
&quot;Index&quot;, null, 
&quot;IndexNoSpread&quot;, null, 
&quot;Fixed&quot;, null, 
&quot;SmartBlended&quot;, null, 
&quot;SmartFixed&quot;, min(Fixed_Rate__c, Index_reference__r.Current_Value__c/10 + Index_Adder__c), 
&quot;Blended&quot;, Index_reference__r.Current_Value__c/10 + Index_Adder__c, 
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 2 Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>