force-app/main/default/objects/Rate__c/fields/Suspended__c.field-meta.xml
<CustomField>
    <fullName>Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this plan is not visible due to incorrect information, or it has not yet been approved by an administrator since its creation.</description>
    <inlineHelpText>If checked, this plan is not visible due to incorrect information, or it has not yet been approved by an administrator since its creation.</inlineHelpText>
    <label>Suspended</label>
    <type>Checkbox</type>
</CustomField>