force-app/main/default/objects/Rate__c/fields/TDSP__c.field-meta.xml
<CustomField>
    <fullName>TDSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which TDSP has this rate available?</description>
    <inlineHelpText>Which TDSP has this rate available?</inlineHelpText>
    <label>TDSP</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>REP Lite, REP Portal User, REPs Profile, TrueCost REPs Profile</value>
        </filterItems>
        <filterItems>
            <field>TDSP__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>TDSP</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notEqual</operation>
            <value>REP Lite, REP Portal User, REPs Profile, TrueCost REPs Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>