force-app/main/default/objects/Rate__c/fields/Third_Party_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Payment_Fee__c</fullName>
    <description>Fee for bill payment issued through a third-party/pay station</description>
    <inlineHelpText>Fee for bill payment issued through a third-party/pay station</inlineHelpText>
    <label>Third-Party Payment Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>