force-app/main/default/objects/Rate__c/fields/TOS_Url__c.field-meta.xml
<CustomField>
    <fullName>TOS_Url__c</fullName>
    <description>Links to the TOS related to the Rate listed.</description>
    <inlineHelpText>Links to the TOS related to the Rate listed.</inlineHelpText>
    <label>TOS Url</label>
    <type>Url</type>
</CustomField>