force-app/main/default/objects/Rate__c/fields/Update_All_Rates__c.field-meta.xml
<CustomField>
    <fullName>Update_All_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ADMIN ONLY, DO NOT USE</description>
    <inlineHelpText>ADMIN ONLY, DO NOT USE</inlineHelpText>
    <label>Update All Rates</label>
    <type>Checkbox</type>
</CustomField>