force-app/main/default/objects/Rate__c/fields/Usage_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Usage_Discount_Amount__c</fullName>
    <label>Usage Discount Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>