force-app/main/default/objects/Rate__c/fields/Usage_Discount_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Usage_Discount_Minimum__c</fullName>
    <label>Usage Discount Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>