force-app/main/default/objects/Rate__c/fields/Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Volume_Type__c</fullName>
    <description>How are contract details dated and how are volumes entered</description>
    <inlineHelpText>How are contract details dated and how are volumes entered (ex. Monthly-Daily = Monthly contract details with a Daily volume entered for each month)</inlineHelpText>
    <label>Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily-Daily</fullName>
            </value>
            <value>
                <fullName>Monthly-Daily</fullName>
            </value>
            <value>
                <fullName>Monthly-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>