force-app/main/default/objects/Rate__c/fields/X1000_kWh_rate__c.field-meta.xml
<CustomField>
    <fullName>X1000_kWh_rate__c</fullName>
    <description>Average pricing in cents based on monthly usage of 1000 kWh</description>
    <inlineHelpText>Average pricing in cents based on monthly usage of 1000 kWh</inlineHelpText>
    <label>1000 kWh rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>