force-app/main/default/objects/Rate__c/fields/X500_kWh_rate_cents__c.field-meta.xml
<CustomField>
    <fullName>X500_kWh_rate_cents__c</fullName>
    <description>Average pricing in cents based on monthly usage of 500 kWh</description>
    <inlineHelpText>Average pricing in cents based on monthly usage of 500 kWh</inlineHelpText>
    <label>500 kWh rate (cents)</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>