force-app/main/default/objects/Rate__c/fields/YRAC_Url__c.field-meta.xml
<CustomField>
    <fullName>YRAC_Url__c</fullName>
    <description>Links to the YRAC related to the Rate listed.</description>
    <inlineHelpText>Links to the YRAC related to the Rate listed.</inlineHelpText>
    <label>YRAC Url</label>
    <type>Url</type>
</CustomField>