force-app/main/default/objects/Rate__c/fields/Zero_Usage_Fee__c.field-meta.xml
<CustomField>
    <fullName>Zero_Usage_Fee__c</fullName>
    <description>Fee for zero usage per month per meter.</description>
    <inlineHelpText>Fee for zero usage per month per meter.</inlineHelpText>
    <label>Zero Usage Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>