force-app/main/default/objects/Rate__c/recordTypes/CES_C_I_SubProduct.recordType-meta.xml
<RecordType>
    <fullName>CES_C_I_SubProduct</fullName>
    <active>true</active>
    <label>CES C&amp;I SubProduct</label>
</RecordType>