force-app/main/default/objects/Rate__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>Shows the fields relevant to commercial rates.</description>
    <label>Commercial</label>
</RecordType>