force-app/main/default/objects/Rate__c/recordTypes/Gas_Choice_Rate.recordType-meta.xml
<RecordType>
    <fullName>Gas_Choice_Rate</fullName>
    <active>true</active>
    <label>Gas Choice Rate</label>
</RecordType>