force-app/main/default/objects/Rate__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <description>Shows the fields relevant to residential rates.</description>
    <label>Residential</label>
</RecordType>