force-app/main/default/objects/Rate__c/recordTypes/Residential_TOU.recordType-meta.xml
<RecordType>
    <fullName>Residential_TOU</fullName>
    <active>true</active>
    <description>For residential electric plans that have different prices at different times.</description>
    <label>Residential TOU</label>
</RecordType>