force-app/main/default/objects/Rate__c/validationRules/Gas_Choice_All_Rates_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Gas_Choice_All_Rates_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Record_Type_Name__c = &quot;Gas Choice Rate&quot;, 

OR( 
Publicly_Available__c = TRUE, 
TEXT(Confirmation_Code_Status__c) = &quot;Activated with pricing&quot;
), 

AND(
Not( ISPICKVAL( Plan__r.Rate_Type__c , &quot;SmartBill&quot;)  ),    
 
OR(     
  AND(Index_Adder__c = 0, Fixed_Rate__c = 0), 
  AND( ISNULL(Index_Adder__c), ISNULL(Fixed_Rate__c)), 
  AND(Index_Adder__c = 0,ISNULL(Fixed_Rate__c)),  
  AND( ISNULL(Index_Adder__c),Fixed_Rate__c = 0)
)
)
)</errorConditionFormula>
    <errorMessage>Rate12: Gas Choice rates should not have 0&#39;s for Index Adder AND Fixed Rate if they are activated/publicly available.</errorMessage>
</ValidationRule>