force-app/main/default/objects/Rate__c/validationRules/Minimum_Maximum_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Maximum_Usage</fullName>
    <active>true</active>
    <description>If there is a minimum, there must be a maximum and vice versa.</description>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(Minimum_Annual_Usage__c)),ISBLANK(Maximum_Annual_Usage__c)), AND(NOT(ISBLANK(Maximum_Annual_Usage__c)),ISBLANK(Minimum_Annual_Usage__c)))</errorConditionFormula>
    <errorDisplayField>Maximum_Annual_Usage__c</errorDisplayField>
    <errorMessage>Rate09: Both a minimum AND maximum is required if either one is populated.</errorMessage>
</ValidationRule>