force-app/main/default/objects/Rate__c/validationRules/Minimum_Usage_Less_Maximum_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Usage_Less_Maximum_Usage</fullName>
    <active>true</active>
    <description>The minimum usage must be less than the maximum</description>
    <errorConditionFormula>Maximum_Annual_Usage__c &lt;  Minimum_Annual_Usage__c</errorConditionFormula>
    <errorDisplayField>Maximum_Annual_Usage__c</errorDisplayField>
    <errorMessage>Rate10: The minimum annual usage must be LESS than the maximum.</errorMessage>
</ValidationRule>