force-app/main/default/objects/Rate__c/validationRules/Threshhold_and_Min_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>Threshhold_and_Min_Usage</fullName>
    <active>true</active>
    <description>They go together like peanut butter and jelly</description>
    <errorConditionFormula>OR(AND(Minimum_Usage_Charge__c &gt; 0 , NOT(Minimum_Usage_Charge_Threshold_kWh__c &gt; 0)), AND(Minimum_Usage_Charge__c &gt; 0 , ISNULL(Minimum_Usage_Charge_Threshold_kWh__c )))</errorConditionFormula>
    <errorDisplayField>Minimum_Usage_Charge_Threshold_kWh__c</errorDisplayField>
    <errorMessage>Rate02: You must enter a kWh threshold for the minimum usage charge.  The value must also be a positive number, so please check for errors.</errorMessage>
</ValidationRule>