force-app/main/default/objects/Rate__c/validationRules/YRAC_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>YRAC_URL</fullName>
    <active>true</active>
    <description>can&#39;t start with http or https</description>
    <errorConditionFormula>NOT(BEGINS( Link_for_YRAC__c , &quot;http&quot;))</errorConditionFormula>
    <errorDisplayField>Link_for_YRAC__c</errorDisplayField>
    <errorMessage>Rate06: EFL url link must include &quot;http://&quot; or &quot;https://&quot; before the www.</errorMessage>
</ValidationRule>